# ai-video-generator-editor

./: .gitignore  README.md  Untitled.ipynb  Untitled2.ipynb  __requirements.txt  _system.py  app.py  base_modules.py  check_versions.py  combined_code.txt  combined_code_old.txt  config.py  config_manager.py  influencer_3_notebook-Copy1.ipynb  influencer_3_notebook.ipynb  influencer_4.py  influencer_4_notebook.ipynb  main.py  module_discovery.py  mp3_to_wav_converter.py  nicegui_app.py  package_code.sh  project_manager.py  pyproject.toml  requirements.txt  run_influencer.py  setup.py  system.json  system.py  task_executor.py  todo.todo  ui_components.py  ui_task_executor.py  utils.py  video_assembly.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  influencer-v1-checkpoint.ipynb  influencer_3_notebook-Copy1-checkpoint.ipynb  influencer_3_notebook-checkpoint.ipynb  influencer_4_notebook-checkpoint.ipynb  main-checkpoint.py
diffusers_helper/: __init__.py
examples/: custom_text_model.py
experiments/: direct.ipynb  influencer-v2.ipynb
experiments/.ipynb_checkpoints/: influencer-v3 copy-checkpoint.py  influencer-v3-checkpoint.py
i2v_modules/: __init__.py  i2v_ltx.py  i2v_slideshow.py  i2v_svd.py  i2v_wan.py
influencer/: __init__.py  cli.py  config.py  main.py
influencer/generators/: video_assembly.py
influencer/utils/: memory.py  (+1 more)
llm_modules/: __init__.py  llm_zephyr.py
t2i_modules/: __init__.py  t2i_juggernaut.py  t2i_sdxl.py
t2v_modules/: __init__.py  t2v_ltx.py  t2v_wan.py  t2v_zeroscope.py
tts_modules/: __init__.py  tts_coqui.py
(+9 files in other folders)
