[project]
name = "influencer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "coqui-tts>=0.24.3",
    "diffusers>=0.33.1",
    "hf-xet>=1.1.1",
    "jupyter>=1.1.1",
    "moviepy>=2.1.2",
    "transformers>=4.51.3",
]
