[project]
name = "influencer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "coqui-tts>=0.24.3",
    "diffusers>=0.33.1",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.1",
    "huggingface-hub[cli]>=0.31.2",
    "jupyter>=1.1.1",
    "moviepy>=2.1.2",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "transformers>=4.51.3",
]
