[project]
name = "influencer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "coqui-tts>=0.24.3",
    "diffusers>=0.33.1",
    "ftfy>=6.3.1",
    "gputil>=1.4.0",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.1",
    "huggingface-hub[cli]>=0.31.2",
    "jupyter>=1.1.1",
    "llvmlite>=0.44.0",
    "moviepy>=2.1.2",
    "mutagen>=1.47.0",
    "nicegui>=2.19.0",
    "numpy>=1.26.4",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "pydub>=0.25.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.51.3",
]
